--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-
+    {{ dump(items) }}
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/Users/jfm/Documents/Mes Docs/DevOps/Docker/Symfony/symfony-6-with-dunglas-docker/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
